--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -2,3 +2,9 @@ spring:
   redis:
     host: 10.0.2.190
     database: 2
+datasource:
+    myDataSource:
+        url: jdbc:mysql://10.0.2.190:3306/game_service?autoReconnect=true&failOverReadOnly=false&useUnicode=true&zeroDateTimeBehavior=convertToNull
+        username: root
+        password: 123456
+        driverClassName: com.mysql.jdbc.Driver
