--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -8,3 +8,7 @@ datasource:
         username: root
         password: 123456
         driverClassName: com.mysql.jdbc.Driver
+zk:
+  url: 127.0.0.1:2181
+  timeout: 1000
+  retry: 3
