--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -12,3 +12,6 @@ zk:
   url: 127.0.0.1:2181
   timeout: 1000
   retry: 3
+distlock:
+#分布式锁的实现有： Redis, Mysql, Oracle, Zookeeper
+  implementor: Zookeeper
